--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,17 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+header #api_status {
+    height: 40px;
+    width: 40px;
+    background-color: #ff545f;
+    border-radius: 50%;
+    position: absolute;
+    top: 5%;
+    right: 30px;
+    transform: translateY(-50%);
+    margin: auto;
+}
+#api_status.available {
+    background-color: #ff545f;
+}
